# pelican-social-cards

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
pelican/plugins/generate_social_thumbnails/: __init__.py  generate_social_thumbnails.py  settings.py
pelican/plugins/social_cards/: __init__.py  cards_generator.py  settings.py  social_cards.py
tests/: conftest.py  test_card_generation.py  test_metadata.py  test_text_box.py
