[tool.poetry]
name = "pelican-social-cards"
version = "0.4.0"
description = "Plugin to generate social media cards with post title embedded"
authors = ["Mirek Długosz"]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["pelican", "plugin"]
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6.3"
pelican = "^4.5"
markdown = {version = "^3.2.2", optional = true}
pillow = "*"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}
flake8 = "^3.9.2"
flake8-black = "^0.2.3"
invoke = "^1.6.0"
isort = "^5.9.3"
markdown = "^3.2.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-pythonpath = "^0.7.3"
pytest-sugar = "^0.9.4"
Werkzeug = "^1.0"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
git-username = "botpub"
git-email = "botpub@autopub.rocks"

[tool.isort]
# Maintain compatibility with Black
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
