[tool.poetry]
name = "pelican-social-cards"
version = "0.4.4"
description = "Plugin to generate social media cards with post title embedded"
authors = ["Mirek Długosz"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/mirekdlugosz/pelican-social-cards"
repository = "https://github.com/mirekdlugosz/pelican-social-cards"
keywords = ["pelican", "plugin"]
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pelican = ">=4.5"
markdown = {version = "^3.5", optional = true}
pillow = "~=10.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
flake8-black = "*"
invoke = "*"
isort = "*"
markdown = "*"
pytest = "*"
pytest-cov = "*"
pytest-pythonpath = "*"
pytest-sugar = "*"
Werkzeug = "*"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.isort]
# Maintain compatibility with Black
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.core.masonry.api"
